# estudando-rust

akimalandro/: Cargo.toml
akimalandro/release/: akinator
akimalandro/src/: main.rs
collections_exercise/: Cargo.toml
collections_exercise/src/: algebra.rs  empresa.rs  main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
true_or_false/: Cargo.toml
true_or_false/release/: true_or_false
true_or_false/src/: main.rs
what_is_the_number/: Cargo.toml
what_is_the_number/src/: main.rs
