[package]
name = "collections_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"

[profile.release]
opt-level = 'z'  # Otimiza para o tamanho do código
lto = true       # Habilita a otimização de tempo de linkagem
codegen-units = 1 # Reduz a paralelização para melhorar as otimizações
